# esp32_iot

./: esp_linux配置.txt
01_test_queue/: CMakeLists.txt
01_test_queue/main/: 01_test_queue.c  CMakeLists.txt
02_task_sem/: CMakeLists.txt
02_task_sem/main/: 02_task_sem.c  CMakeLists.txt
02_task_sem_Mutex/main/: 02_task_sem.c  CMakeLists.txt
03_EventGroup/: CMakeLists.txt
03_EventGroup/main/: 03_EventGroup.c  CMakeLists.txt
03_test_ev/: CMakeLists.txt
03_test_ev/main/: 03_test_ev.c  CMakeLists.txt
04_button/main/: 04_led.c  button.c
04_led/: CMakeLists.txt
04_led/main/: 04_led.c  CMakeLists.txt  button.c
05_ws2812/main/: CMakeLists.txt  led_ws2812.c  led_ws2812.h  led_ws2812_test.c  main.c
06_dth11_RMT/main/: CMakeLists.txt  dht11.c  dht11.h  dht11_test.c  main.c
07_ADC_ntc/main/: CMakeLists.txt  main.c  ntc.c  ntc.h  ntc_tst.c
08_hc_sr04/main/: CMakeLists.txt  main.c  main_test.c
10_uart/main/: CMakeLists.txt  uart.c  uart_test.c
11_spi_display/main/: st7789_driver.c  st7789_driver.h
12_i2c_lcd/: sdkconfig
13_partition/: sdkconfig
13_partition/main/: main.c
14_nvs/main/: main.c
15_spiffs/: partitions_example.csv
15_spiffs/main/: main.c
17_wifi/main/: simple_wifi_sta.c
19_mqtt_test/: CMakeLists.txt
y01_lvgl_9.2/: CMakeLists.txt  partitions_ws.csv  sdkconfig  sdkconfig.old
y01_lvgl_9.2/main/: 1.txt  CMakeLists.txt  aida64.c  aida64.h  idf_component.yml  lv_port.c  lv_port.h  lvgl_display.c  ui_home.c  ui_home.h  ui_led.c  ui_led.h  weather.c  weather.h
y01_lvgl_9.2/main/img/: humidity_img.c  temp_img.c
(+35 files in other folders)
